# VoiceLink

./: .gitignore  .qwen3_ready  AGENTS.md  CLIENT_API_REFERENCE.md  DEEP_DIVE.md  JESSICA_VOICE_INTEGRATION.md  LICENSE  README.md  SECURITY_REVIEW.md  TASKS.md  TODO.md  check_gpu_now.py  compare_performance.py  comprehensive_performance_test.py  debug_kokoro_output.py  debug_onnx.py  jessica_demo.pcm  jessica_test.pcm  kokoro_voice_start_server_quick.bat  simple_test.py  sky_demo.pcm  test_gpu_env.py  test_gpu_now.py  test_gpu_server.py  test_jessica_api.bat  test_speed.py  test_tts.py  voicelink_client_demo.py
.claude/: settings.local.json
.github/workflows/: build-exe-on-push.yml  ci.yml  release.yml
gui/: index.html
gui/src/: main.ts  styles.css
gui/src-tauri/: Cargo.toml
gui/src-tauri/nsis/: hooks.nsh
gui/src-tauri/src/: lib.rs
models/Ava/: README.md  model_config.json  phoneme_processor.pkl
research/: 01_explore_sapi.ps1  02_kokoro_test.py  03_test_server.py  04_life_of_speak_call.py
sapi_bridge/src/: class_factory.cpp  class_factory.h  debug.h  dllmain.cpp  http_client.cpp  http_client.h  tts_engine.cpp  tts_engine.h
scripts/: benchmark_kokoro_sky_speed.py  convert_kokoro_to_onnx.py  generate_samples.py
server/: __init__.py  config.py  download_qwen3.py  main.py  requirements.txt
server/models/: __init__.py  ava_model.py  base.py  kokoro_model.py  kokoro_onnx_model.py  kokoro_onnx_official.py  kokoro_pytorch.py  qwen3_model.py
server/routers/: __init__.py  qwen3.py  tts.py
tools/: convert_voice.py
